Fixed transaction history scrollbar colors

--- a/portal/app/[locale]/tunnel/transaction-history/_components/transactionHistory.css
+++ b/portal/app/[locale]/tunnel/transaction-history/_components/transactionHistory.css
@@ -45,6 +45,9 @@
     @apply h-[calc(100dvh-6px-theme(spacing.2)-theme(spacing.3)-theme(spacing.4)-theme(spacing.6)-theme(spacing.14)-theme(spacing.14)-theme(spacing.14)-theme(spacing.16)-theme(spacing.24))]
       md:h-[calc(100dvh-theme(spacing.2)*2-theme(spacing.2)-theme(spacing.3)-theme(spacing.8)-theme(spacing.12)-theme(spacing.12)-theme(spacing.14)-theme(spacing.17))]
       xl:h-[calc(100dvh-theme(spacing.2)*2-theme(spacing.2)-theme(spacing.8)-theme(spacing.12)-theme(spacing.12)-theme(spacing.14)-theme(spacing.17)-theme(spacing.12))];
+
+    scrollbar-color: #d4d4d4 transparent;
+    scrollbar-width: thin;
   }
 
   /* This should be applied on every th and td cells.
